# student_line_homework_bot

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  如果
.claude/: settings.local.json
.github/workflows/: ci.yml  cron.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_tasks.py  0003_students.py  0004_stuck_concepts.py  0005_inline_stuck_flow.py  0006_drop_stuck_gate.py
app/: config.py  cron.py  db.py  line_client.py  logging.py  main.py  messages.py  models.py
app/handlers/: commands.py  student.py  teacher.py  webhook.py
app/services/: assignment.py  photo.py  rich_menu.py  stuck.py  student.py
assets/rich_menu/: README.md
tests/: conftest.py  test_carryover.py  test_commands.py  test_cron.py  test_delete.py  test_models.py  test_multi_student.py  test_photo.py  test_postbacks.py  test_schedule.py  test_services.py  test_stuck.py  test_tasks_flow.py  test_webhook.py
